...
    <variable
      name="viewModel"
      type="com.akshay.roomaccounting.ui.home.detail.DeleteConfirmationDialogViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/delete_confirmation_dialog_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/inset_drawable">

    <TextView
      android:id="@+id/confirmation_title_text_view"
...
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/confirmation_message_text_view"
      style="@style/SubHeading1"
      android:layout_width="0dp"
      android:layout_marginStart="32dp"
      android:layout_marginTop="16dp"
      android:layout_marginEnd="32dp"
      android:text="@{String.format(@string/confirm_delete_message, viewModel.invoiceId)}"
...
